@startuml

Hecho --> Categoria
Hecho --> Ubicacion


NormalizadorAdapter ..|> INormalizadorAdapter
INormalizadorAdapter --> Hecho
Sanitizador --> Hecho


'================== CONTENIDO ==================
class Categoria {
    - nombre: String
    - id: Long
    - categoriasExternas : List<String>
}

class Ubicacion {
    - latitud: Double
    - longitud: Double
    - pais : String
    - ciudad : String
    - provincia : String
}

class Hecho {
    - idHecho: Long
    - titulo: String
    - descripcion: String
    - categoria: Categoria
    - ubicacion: Ubicacion
    - fechaAcontecimiento: LocalDateTime
    - fechaCarga: LocalDateTime
}

class Sanitizador {
    + sanitizar(Hecho) : Hecho
    - aplanarTexto(String) : String
}


'================== INTERFACES ==================
interface INormalizadorAdapter{
    + obtenerHechoNormalizado(HechoOutputDTONormalizador) : Mono<Hecho>
}

'================== NORMALIZADOR ==================

class NormalizadorAdapter {
    - webClient : WebClient
    - timeOutMS : Integer
    + obtenerHechoNormalizado(HechoOutputDTONormalizador) : Mono<Hecho>
}

@enduml